--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -20,4 +20,4 @@ jobs:
           HOST_NAME: ${{ secrets.HOST_NAME }}
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd bookers-jp && git pull origin master'
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd bookers-jp && git pull origin master && kill $(cat tmp/pids/puma.pid) && ~/rbenv/shims/rails s -e production'
