--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,4 +1,4 @@
-name: test
+name: Deploy
 on:
   push:
     branches: [master]
@@ -21,3 +21,4 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd bookers-jp && git pull origin master && kill $(cat tmp/pids/puma.pid) && ~/.rbenv/shims/rails s -e production'
+
